--- a/UserModeTool/UserModeTool.cbp
+++ b/UserModeTool/UserModeTool.cbp
@@ -41,6 +41,9 @@
 			<Add option="-lWS2_32" />
 			<Add library="gdi32" />
 		</Linker>
+		<Unit filename="../common/include/command/CommandCollection.h" />
+		<Unit filename="../common/include/command/interface/ICommandCollection.h" />
+		<Unit filename="../common/include/command/interface/ITaggedCommand.h" />
 		<Unit filename="../common/include/networking/BasicWinsockSocket.h" />
 		<Unit filename="../common/include/networking/SockAddrIn.h" />
 		<Unit filename="../common/include/networking/WinsockAddressedSocket.h" />
@@ -57,6 +60,7 @@
 		<Unit filename="../common/include/networking/interfaces/ITCPClient.h" />
 		<Unit filename="../common/include/networking/interfaces/ITCPServer.h" />
 		<Unit filename="../common/include/networking/interfaces/IUDPServer.h" />
+		<Unit filename="../common/src/command/CommandCollection.cpp" />
 		<Unit filename="../common/src/networking/BasicWinsockSocket.cpp" />
 		<Unit filename="../common/src/networking/SockAddrIn.cpp" />
 		<Unit filename="../common/src/networking/WinsockInitializer.cpp" />
@@ -64,7 +68,7 @@
 		<Unit filename="../common/src/networking/WinsockTCPServer.cpp" />
 		<Unit filename="../common/src/networking/WinsockUDPClient.cpp" />
 		<Unit filename="../common/src/networking/WinsockUDPServer.cpp" />
-		<Unit filename="include/command/CommandDispatcher.h" />
+		<Unit filename="include/command/CommandManager.h" />
 		<Unit filename="include/command/execute/KeyloggerExecuter.h" />
 		<Unit filename="include/command/execute/ScreenshotExecuter.h" />
 		<Unit filename="include/command/interface/ICommandDispatcher.h" />
@@ -82,7 +86,7 @@
 		<Unit filename="include/utils/factory.h" />
 		<Unit filename="include/utils/registry/IRegistryEditor.h" />
 		<Unit filename="include/utils/registry/RegistryEditor.h" />
-		<Unit filename="src/command/CommandDispatcher.cpp" />
+		<Unit filename="src/command/CommandManager.cpp" />
 		<Unit filename="src/command/execute/KeyloggerExecuter.cpp" />
 		<Unit filename="src/command/execute/ScreenshotExecuter.cpp" />
 		<Unit filename="src/main.cpp" />
