--- a/Control/RemoteClient.cbp
+++ b/Control/RemoteClient.cbp
@@ -14,8 +14,6 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
-					<Add directory="Control/include/command" />
-					<Add directory="common/include/command" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -25,8 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="Control/include/command" />
-					<Add directory="common/include/command" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
